--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Galaxy</title>
+    <title>Void</title>
     <link rel="stylesheet" href="css/galaxy.css" />
     <link rel="stylesheet" href="css/index.css" />
   </head>
@@ -11,11 +11,11 @@
     <div class="cursor"><div class="planet"></div></div>
     <div class="container">
       <div class="mainhead">
-        <div class="title"><h1>Galaxy</h1></div>
+        <div class="title"><h1>Void</h1></div>
         <div class="desc">An interstellar way to browse the web while learning.</div>
         <input type="text" class="galaxy-input" />
         <button class="search-btn">🚀 Launch</button>
-        <button class="discord-btn">Join our Discord</button>
+        <button class="discord-btn">SweetSweet💜</button>
       </div>
     </div>
 
@@ -29,7 +29,7 @@
     <script src="index.js"></script>
     <script>
       document.querySelector(".discord-btn").addEventListener("click", () => {
-        window.open("https://discord.gg/udNPgGXjws", "_blank");
+        window.open("http://sites.google.com/view/sensmi/", "_blank");
       });
     </script>
   </body>
